 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_tokens_to_ast"
version = "1.1.13"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
rayon = { version = "1.10.0" }
thiserror = "2.0.12"
tracing = { version = "0.1.40" }
applicability = { path = "../applicability"}
applicability_lexer_base = { path = "../applicability_lexer_base"}
applicability_parser_types = { path = "../applicability_parser_types"}
applicability_match = { path = "../applicability_match"}
applicability_parser_errors = { path = "../applicability_parser_errors"}
feature_definition = { path = "../feature_definition"}

[dev-dependencies]
pretty_assertions = "1.4.1"
applicability_lexer_config_markdown = { path = "../applicability_lexer_config_markdown"}
applicability_lexer_multi_stage_lexer = { path = "../applicability_lexer_multi_stage_lexer"}