 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "bat"
version = "1.1.6"
description="The Block Applicability Tool(BAT) is a CLI processor for features,configurations and substitutions on arbitrary files."
edition = "2024"
authors=["Luciano Vaglienti <luciano.t.vaglienti@boeing.com>"]
license.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = { version = "1.0.82" }
tracing = { version = "0.1.40" }

bat_lib = { path = "../bat_lib" }
cli_logging = { path = "../cli_logging"}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = "0.1.46"