 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "bat_lib"
version = "1.1.11"
edition = "2024"
license.workspace = true

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
common-path = { version = "1.0.0" }
anyhow = { version = "1.0.82" }
tracing = { version = "0.1.40" }
clap-verbosity-flag = { version = "2.2.0" }
applicability = { path = "../applicability",features = ["serde"]}
applicability_parser = { path = "../applicability_parser",features = ["serde"]}
applicability_parser_config = { path = "../applicability_parser_config"}
applicability_substitution = { path = "../applicability_substitution"}
applicability_sanitization = { path = "../applicability_sanitization"}
applicability_tokens_to_ast = { path = "../applicability_tokens_to_ast"}
bill_of_features = { path = "../bill_of_features" }
doc_definitions = { path = "../doc_definitions"}