 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "cli_logging"
version = "1.1.11"
edition = "2024"
license.workspace = true

[dependencies]
indicatif = { version = "0.18.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
tracing-appender = { version = "0.2.3" }
tracing-indicatif = { version = "0.3.12" }
clap-verbosity-flag = { version = "2.2.0" }